# solfs

./: .gitignore  ReadMe.md
dataStore/: Cargo.toml
dataStore/docs/: ai_validation_feature.md
dataStore/src/: Cargo.toml  entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
dataStore/static/: instructionFlow.md
dataStore/tests/: integration_tests.rs
