[package]
name = "dataaccount"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = { version = "=1.5.5", features = ["derive"] }
bytemuck = { version = "1.7.2", features = ["derive"] }
solana-program = "=1.18.22"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
num-traits = "0.2.14"
num-derive = "0.3"
thiserror = "1.0"
shank = "0.0.12"
serde = "1.0.152"
serde_json = "1.0.91"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

[features]
test-bpf = []
no-entrypoint = []
custom-heap = []
custom-panic = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.18.22"
solana-sdk = "=1.18.22"
solana-validator = "=1.18.22"
borsh = { version = "=1.5.5", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
